force-app/main/default/objects/Interview__c/fields/Call_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_Link__c</fullName>
    <label>Call Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>