force-app/main/default/objects/Interview__c/fields/Date_and_Time_R3__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_R3__c</fullName>
    <label>Date and Time - R3</label>
    <type>DateTime</type>
</CustomField>