force-app/main/default/objects/Interview__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>