force-app/main/default/objects/Interview__c/fields/Interview_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Interview_Rounds__c</fullName>
    <label>Interview Rounds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1-Expert</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2-Intermediate</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3-Fresher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>