force-app/main/default/objects/Interview__c/fields/Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status__c</fullName>
    <label>Interview Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Begin</fullName>
                <default>true</default>
                <label>Begin</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>