force-app/main/default/objects/Interview__c/fields/Round2_Technical_Interview__c.field-meta.xml
<CustomField>
    <fullName>Round2_Technical_Interview__c</fullName>
    <label>Round - 2 Technical Interview</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>