force-app/main/default/objects/Interview__c/fields/Round3_HR_Interview__c.field-meta.xml
<CustomField>
    <fullName>Round3_HR_Interview__c</fullName>
    <label>Round - 3 HR Interview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>