force-app/main/default/objects/Interview__c/fields/Round_1_Coding__c.field-meta.xml
<CustomField>
    <fullName>Round_1_Coding__c</fullName>
    <label>Round - 1 Coding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>