force-app/main/default/objects/Interview__c/validationRules/Prevent_Changing_Round_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Changing_Round_1</fullName>
    <active>true</active>
    <description>Prevent Changing R1_Status After It&apos;s Set to Fail</description>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE( Round_1_Coding__c ), &quot;Fail&quot;),
  NOT(ISPICKVAL(Round_1_Coding__c, &quot;Fail&quot;))
)</errorConditionFormula>
    <errorDisplayField>Round_1_Coding__c</errorDisplayField>
    <errorMessage>You cannot change Round 1 status after it is marked as Fail.</errorMessage>
</ValidationRule>