force-app/main/default/objects/Interview__c/validationRules/Prevent_Changing_Round_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Changing_Round_2</fullName>
    <active>true</active>
    <description>Prevent Changing  Round 2 After It&apos;s Set to Fail</description>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE( Round2_Technical_Interview__c ), &quot;Fail&quot;),
  NOT(ISPICKVAL(Round2_Technical_Interview__c, &quot;Fail&quot;))
)</errorConditionFormula>
    <errorDisplayField>Round2_Technical_Interview__c</errorDisplayField>
    <errorMessage>You cannot change Round 2 status after it is marked as Fail.</errorMessage>
</ValidationRule>