force-app/main/default/objects/Interview__c/validationRules/Prevent_Changing_Round_R3.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Changing_Round_R3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE( Round3_HR_Interview__c ), &quot;Fail&quot;),
  NOT(ISPICKVAL(Round3_HR_Interview__c, &quot;Fail&quot;))
)</errorConditionFormula>
    <errorDisplayField>Round3_HR_Interview__c</errorDisplayField>
    <errorMessage>You cannot change Round 3 status after it is marked as Fail.</errorMessage>
</ValidationRule>