force-app/main/default/objects/Interview__c/listViews/Interview_Journey_Queue_Interview.listView-meta.xml
<ListView>
    <fullName>Interview_Journey_Queue_Interview</fullName>
    <filterScope>Queue</filterScope>
    <label>Interview Journey Queue</label>
    <queue>Interview_Journey_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>